--- a/docs/Rapport/src/PunyDuck.tex
+++ b/docs/Rapport/src/PunyDuck.tex
@@ -13,9 +13,14 @@
 \usepackage{enumerate}
 \usepackage{tikz-uml}
 \usepackage{url}
+\usepackage{rotating}
 
 \sloppy
 \hyphenpenalty 10000000
+\definecolor{bargreen}{RGB}{133,193,132}
+\definecolor{groupgreen}{RGB}{53,107,52}
+\definecolor{darkgreen}{RGB}{35,68,35}
+\definecolor{linkred}{RGB}{165,0,33}
 
 \begin{document}
 
@@ -222,36 +227,21 @@ Ensuite nous avons créer les différentes classes qui allaient nous servir pour
     \item "LQButton" pour les boutons 
 \end{itemize}
 
+%plus argumenter ici
+La troisième étape fut la phase d'implémentation. D'une part nous nous sommes occupés des classes en rapport avec d'OpenGL tels que "LQShader", "LQTexture" et "LQSurface".
+Par la suite nous avons coder les différentes classes en suivant l'UML précédemment réalisé.
+
+%ici jvous laisse faire jsp du tt quoi mettre
+Pour le côté serveur et base de donnée la première étape fut de ...
+
 \section{Modélisation} %UML gros problème. dès que l'on rajoute des lignes, tout crash avec trois milles erreurs.
 %Incompréhensible, peux-être parce que sa déborde je n'ai pas trouver malgré plusieurs essaies.
 %Je les remplis et après il faudra voir comment les placer pour pas que ça plante
 %Le problème provient sûrement quand un umlclass déborde sur un autre. /!\
 
-\newpage 
 \begin{center}
 \begin{tikzpicture}
-\begin{comment}
-\umlclass[x=8, fill=gray!5]{LQViewable}{
-    -- m\_flex : bool\\ 
-    -- m\_hidden : bool
-}{
-    %+ <<create>>LQViewable();\\
-    + <<create>>LQViewable(LQNumber x, LQNumber y,
-               LQNumber width, LQNumber height,
-               GLint color=0x000000, const std::string iconPath="")\\
-    %+ <<create>>LQViewable(LQNumber x, LQNumber y, bool flex=true)\\
-    %+ hidden() : bool\\ 
-    + hide() : void\\
-    + unhide() : void\\
-    %+ flexible() : bool\\ 
-    + displayFlex() : void\\
-    %+ displayBlock() : void\\
-    + appendChild(LQViewable child) :  LQViewable\\ 
-    + ^drawChildren() : void \\
-    + resizeWidthCallback() : void\\
-    \umlvirt{+ resizeHeightCallback() : void}
-}
-\umlclass[x=-4,y=-6, fill=gray!5]{LQSurface}{
+\umlclass[x=-1,y=-10, fill=gray!5]{LQSurface}{
     -- m\_VBO : GLuint\\
     -- m\_VAO : GLuint\\ 
     -- m\_FBO : GLuint\\
@@ -264,10 +254,22 @@ Ensuite nous avons créer les différentes classes qui allaient nous servir pour
     %-- m\_clearColor : LQColor\\
     %\umlstatic{-- s\_vertices[54] : GLfloat}\\
     %\umlstatic{-- s\_default\_shader : LQShader}
-    }{}
-\end{comment}
+    }{
+    + blit(LQTexture const& texture, GLfloat x, GLfloat y, GLuint VAO) : void\\
+    + fill(GLfloat r, GLfloat g, GLfloat b, GLfloat a=1.0f) : void\\
+    + blit(const LQSurface& surface) : void\\
+    + fill(LQColor const& color) : void\\
+    + move(GLfloat x, GLfloat y) : void\\
+    + move(glm::vec2 distance) : void\\
+    + moveX(GLfloat x) : void\\
+    + moveY(GLfloat y) : void\\
+    + moveTo(GLfloat x, GLfloat y) : void\\
+    + moveTo(glm::vec2 position) : void\\
+    + moveToX(GLfloat x) : void\\
+    + moveToY(GLfloat y) : void\\
+    }
 
-\umlclass[x=-6, fill=gray!5]{LQuark}{
+\umlclass[x=-5, fill=gray!5]{LQuark}{
     -- m\_parent : LQuark \\
     -- m\_prevSibling : LQuark \\
     -- m\_nextSibling : LQuark \\
@@ -298,7 +300,7 @@ Ensuite nous avons créer les différentes classes qui allaient nous servir pour
     %+ swapChildren(LQuark first, LQuark second) : LQuark \\
     %+ swapChildren(LQindex first, LQindex second) : LQuark}
 }
-\umlclass[x=3, fill=gray!5]{LQTexture}{
+\umlclass[x=4.5, fill=gray!5]{LQTexture}{
     -- m\_id : GLuint \\
     -- m\_texWidth : GLuint \\
     -- m\_texHeight : GLuint \\
@@ -318,8 +320,15 @@ Ensuite nous avons créer les différentes classes qui allaient nous servir pour
     \umlstatic{+ deleteTexture(LQTexture texture): void}
 }
 
-\begin{comment}
-\umlclass[x=8, y=-6, fill=gray!5]{LQNumber}{
+%lien entre bloc
+\umlinherit[geometry=-|]{LQuark}{LQSurface}
+\umlinherit[geometry=-|]{LQTexture}{LQSurface}
+\end{tikzpicture}
+\end{center}
+
+\begin{center}
+\begin{tikzpicture}
+\umlclass[fill=gray!5]{LQNumber}{
     -- m\_quark : LQuark\\
     %-- (*m\_invoke)(LQuark*) : void \\ Trouver comment représenter une fonction en attribut UML
     -- m\_value : float \\
@@ -342,7 +351,7 @@ Ensuite nous avons créer les différentes classes qui allaient nous servir pour
     + float() : operator \\
     \umlstatic{+ old() : float}
     }
-\umlclass[x=6, y=-6, fill=gray!5]{LQMathVar}{
+\umlclass[y=-8, fill=gray!5]{LQMathVar}{
     -- m\_number : LQNumber \\
     -- m\_coeff : float \\
     -- m\_next : LQMathVar
@@ -352,8 +361,8 @@ Ensuite nous avons créer les différentes classes qui allaient nous servir pour
     + eval() : float \\
     + parentCoords(LQNumber number) : bool \\
     + compatible(LQNumber number) : bool
-    }
-\umlclass[x=2, y=-9, fill=gray!5]{LQMathExpr}{
+}
+\umlclass[x=10, y=-10, fill=gray!5]{LQMathExpr}{
     -- addCompatible(LQMathVar first, float coeff=1.0f) : void\\
     -- m\_first : LQMathVar \\
     -- m\_last : LQMathVar \\
@@ -377,14 +386,38 @@ Ensuite nous avons créer les différentes classes qui allaient nous servir pour
     \umlvirt{+ operator*(float coeff) : LQMathExpr <<operator>>}\\
     \umlvirt{+ operator/(float coeff) : LQMathExpr <<operator>>}
     }
-\end{comment}
-%lien entre bloc
-%\umlinherit[geometry=-|]{LQuark}{LQSurface}
-%\umlinherit[geometry=-|]{LQTexture}{LQSurface}
-%\umlinherit[geometry=-|]{LQNumber}{LQViewable}
-%\umlinherit[geometry=-|]{LQSurface}{LQViewable}
-%\umlinherit[geometry=-|]{LQMathVar}{LQMathExpr}
-%\umlinherit[geometry=-|]{LQMathExpr}{LQNumber}
+%lien
+\umlinherit[geometry=-|]{LQMathVar}{LQMathExpr}
+\umlinherit[geometry=|-]{LQMathExpr}{LQNumber}
+\end{tikzpicture}
+\end{center}
+
+\begin{center}
+\begin{tikzpicture}
+\umlclass[fill=gray!5]{LQViewable}{
+    -- m\_flex : bool\\ 
+    -- m\_hidden : bool
+}{
+    %+ <<create>>LQViewable();\\
+    + <<create>>LQViewable(LQNumber x, LQNumber y,
+               LQNumber width, LQNumber height,\\
+               GLint color=0x000000, const std::string iconPath="")\\
+    %+ <<create>>LQViewable(LQNumber x, LQNumber y, bool flex=true)\\
+    %+ hidden() : bool\\ 
+    + hide() : void\\
+    + unhide() : void\\
+    %+ flexible() : bool\\ 
+    + displayFlex() : void\\
+    %+ displayBlock() : void\\
+    + appendChild(LQViewable child) :  LQViewable\\ 
+    + ^drawChildren() : void \\
+    + resizeWidthCallback() : void\\
+    \umlvirt{+ resizeHeightCallback() : void}
+}
+\umlclass[x=-3, y=-5, fill=grey!5]{LQSurface}{...\\}{...\\}
+\umlclass[x=3, y=-5, fill=grey!5]{LQNumber}{...\\}{...\\}
+\umlinherit[geometry=-|]{LQNumber}{LQViewable}
+\umlinherit[geometry=-|]{LQSurface}{LQViewable}
 \end{tikzpicture}
 \end{center}
 
@@ -427,88 +460,19 @@ Les interactions avec l'interface concernant le profil sont, la modification de 
 
 %.Partie 5 1/2 pages
 \chapter{Gestion du Projet}
-\section{Organisation et planification} 
-%gantt en latex, les [progress=0] ne sont pas obligatoire. Il faut rassembler plusieurs commit en un.
-\begin{comment} %ça met en commentaire
+\section{Organisation et planification}
+\newpage
+\begin{rotate}{270}
+\begin{comment}
+%police du gantt au choix selon préférence
 \definecolor{bargreen}{RGB}{133,193,132}
 \definecolor{groupgreen}{RGB}{53,107,52}
 \definecolor{darkgreen}{RGB}{35,68,35}
-\definecolor{linkred}{RGB}{165,0,33} %rouge
+\definecolor{linkred}{RGB}{165,0,33}
 
-%police du gantt au choix selon préférence
-%\renewcommand\sfdefault{phv}
-%\renewcommand\mddefault{mc}
-%\renewcommand\bfdefault{bc}
-
-\setganttlinklabel{s-s}{START-TO-START}
-\setganttlinklabel{f-s}{FINISH-TO-START}
-\setganttlinklabel{f-f}{FINISH-TO-FINISH}
-\begin{ganttchart}[
-    canvas/.append style={fill=none, draw=black!25, line width=3pt},
-    hgrid style/.style={draw=black!5, line width=.75pt},
-    vgrid={*1{draw=black!5, line width=.75pt}},
-    today label font=\small\bfseries,
-    title/.style={draw=none, fill=none},
-    title label font=\bfseries\footnotesize,
-    title label node/.append style={below=7pt},
-    include title in canvas=false,
-    %Zone des sous parties d'un groupe
-    bar label font=\mdseries\small\color{black!90},
-    bar label node/.append style={left=1.8cm},
-    bar/.append style={draw=none, fill=darkgreen!60},
-    bar incomplete/.append style={fill=bargreen},
-    bar progress label font=\mdseries\footnotesize\color{black!70},
-    %tête de groupe (Réseau, framwork)
-    group incomplete/.append style={fill=groupgreen!85},
-    group/.append style={draw=none, fill=darkgreen},
-    group left shift=0,
-    group right shift=0,
-    group height=0.3,
-    group peaks tip position=0,
-    group label node/.append style={left=2.5cm},
-    group progress label font=\bfseries\small,
-    %zone rouge / avancement
-    link/.style={-latex, line width=1.5pt, linkred},
-    link label font=\scriptsize\bfseries,
-    link label node/.append style={below left=-2pt and 0pt}
-  ]{1}{15}
-  \gantttitle[
-    title label node/.append style={below left=7pt and -3pt}
-  ]{SEMAINES:\quad1}{1}
-  \gantttitlelist{2,...,15}{1} \\
-  \ganttgroup{Partie Réseaux}{1}{15} \\
-  \ganttbar[progress=75,name=PR1A]{\textbf{PR 1.1} Activité A}{1}{8} \\
-  \ganttbar[progress=67,name=PR1B]{\textbf{PR 1.2} Activité B}{1}{3} \\
-  \ganttbar[progress=50,name=PR1C]{\textbf{PR 1.3} Activité C}{4}{10} \\
-  \ganttbar[progress=0,name=PR1D]{\textbf{PR 1.4} Activité D}{4}{10} \\[grid]
-  \ganttgroup{Partie framework}{1}{25} \\
-  \ganttbar[progress=0]{\textbf{PFRA 2.1} Activité E}{4}{5} \\
-  \ganttbar[progress=0]{\textbf{PFRA 2.2} Activité F}{6}{8} \\
-  \ganttbar[progress=0]{\textbf{PFRA 2.3} Activité G}{9}{10}\\[grid]
-  \ganttgroup{Partie Rapport}{15}{25} \\
-  \ganttbar[progress=0]{\textbf{PRA 2.1} Activité K}{4}{5} \\
-  \ganttbar[progress=0]{\textbf{PRA 2.2} Activité L}{6}{8} 
-  
-  %link entre activitées
-  \ganttlink[link type=s-s]{PR1A}{PR1B}
-  \ganttlink[link type=f-s]{PR1B}{PR1C}
-  \ganttlink[
-    link type=f-f,
-    link label node/.append style=left
-  ]{PR1C}{PR1D}
-\end{ganttchart}
-\end{comment}
-
-%\begin{comment} %ça met en commentaire
-\definecolor{bargreen}{RGB}{133,193,132}
-\definecolor{groupgreen}{RGB}{53,107,52}
-\definecolor{darkgreen}{RGB}{35,68,35}
-\definecolor{linkred}{RGB}{165,0,33} %rouge
-
-%police du gantt au choix selon préférence
 \renewcommand\sfdefault{phv}
-%\renewcommand\mddefault{mc}
-%\renewcommand\bfdefault{bc}
+\renewcommand\mddefault{mc}
+\renewcommand\bfdefault{bc}
 
 \setganttlinklabel{s-s}{START-TO-START}
 \setganttlinklabel{f-s}{FINISH-TO-START}
@@ -517,6 +481,7 @@ Les interactions avec l'interface concernant le profil sont, la modification de 
     canvas/.append style={fill=none, draw=black!25, line width=3pt},
     hgrid style/.style={draw=black!5, line width=.75pt},
     vgrid={*1{draw=black!5, line width=.75pt}},
+    x unit=0.85cm,
     today label font=\small\bfseries,
     title/.style={draw=none, fill=none},
     title label font=\bfseries\footnotesize,
@@ -524,7 +489,7 @@ Les interactions avec l'interface concernant le profil sont, la modification de 
     include title in canvas=false,
     %Zone des sous parties d'un groupe
     bar label font=\mdseries\small\color{black!90},
-    bar label node/.append style={left=1.8cm},
+    bar label node/.append style={left=1cm},
     bar/.append style={draw=none, fill=darkgreen!60},
     bar incomplete/.append style={fill=bargreen},
     bar progress label font=\mdseries\footnotesize\color{black!70},
@@ -535,12 +500,12 @@ Les interactions avec l'interface concernant le profil sont, la modification de 
     group right shift=0,
     group height=0.3,
     group peaks tip position=0,
-    group label node/.append style={left=2.5cm},
+    group label node/.append style={left=1.5cm},
     group progress label font=\bfseries\small,
     %zone rouge / avancement
     link/.style={-latex, line width=1.5pt, linkred},
     link label font=\scriptsize\bfseries,
-    link label node/.append style={below left=-2pt and 0pt}
+    link label node/.append style={below left=-1pt and 0pt}
   ]{1}{15}
   \gantttitle[
     title label node/.append style={below left=7pt and -3pt}
@@ -567,9 +532,47 @@ Les interactions avec l'interface concernant le profil sont, la modification de 
   \ganttlink[link type=f-s]{R}{F}
   \ganttlink[link type=f-f,link label node/.append style=left]{PR1C}{PR1B}
 \end{ganttchart}
+\end{comment}
+%\begin{comment}
+\setganttlinklabel{s-s}{START-TO-START}
+\setganttlinklabel{f-s}{FINISH-TO-START}
+\setganttlinklabel{f-f}{FINISH-TO-FINISH}
+    \begin{ganttchart}[
+        hgrid,
+        vgrid={*{6}{draw=none},{dotted}},
+        vrule/.style={very thick, red},
+        x unit=0.160cm,
+        time slot format=isodate,
+        time slot unit=day,
+        calendar week text = {W\currentweek{}},
+        bar height = 0.6,
+        bar top shift = 0.2,
+        bar label node/.append style={align=left,text width={width("Task1 ")}},
+        bar incomplete/.append style={fill=cyan},
+        progress label text = \relax
+        link/.style={-latex, line width=1.5pt, linkred},
+        ]{2020-02-01}{2020-05-30}
+        \gantttitlecalendar{year, month=name, week} \\
+        \ganttbar[bar/.append style={fill=bargreen}]{Task1}{2020-02-01}{2020-02-05}\\
+        \ganttbar[bar/.append style={fill=bargreen}]{Task1}{2020-02-01}{2020-02-05}\\
+        \ganttbar[bar/.append style={fill=bargreen}]{Task1}{2020-02-01}{2020-02-05}\\
+        \ganttbar[bar/.append style={fill=bargreen}]{Task1}{2020-02-01}{2020-02-05}\\
+        \ganttbar[bar/.append style={fill=bargreen}]{Task1}{2020-02-01}{2020-02-05}\\
+        \ganttbar[bar/.append style={fill=bargreen}]{Task1}{2020-02-01}{2020-02-05}\\
+        \ganttbar[bar/.append style={fill=bargreen}]{Task1}{2020-02-01}{2020-02-05}\\
+        \ganttbar[bar/.append style={fill=bargreen}]{Task1}{2020-02-01}{2020-02-05}\\
+        \ganttbar[bar/.append style={fill=bargreen}]{Task1}{2020-02-01}{2020-02-05}\\
+        \ganttbar[bar/.append style={fill=bargreen}]{Task1}{2020-02-01}{2020-02-05}\\
+        \ganttbar[bar/.append style={fill=bargreen}]{Task1}{2020-02-01}{2020-02-05}\\
+        \ganttbar[bar/.append style={fill=bargreen}]{Task1}{2020-02-01}{2020-02-05}\\
+        \ganttbar[bar/.append style={fill=bargreen}, name=Task2]{Task2}{2020-04-15}{2020-04-27}\\
+        \ganttbar[bar/.append style={fill=bargreen}, name=SW]{Site Web}{2020-04-28}{2020-05-30}\\
+        \ganttvrule{2020-05-30}{2020-05-30}
+        
+        \ganttlink[link type=f-s]{Task2}{SW}
+    \end{ganttchart}
 %\end{comment}
-\section{Changements majeurs}%ceux effectués en cours de projet (changement d'idée, revoir un algo,...)
-
+\end{rotate}
 
 %.Partie 6 1 page
 \chapter{Bilan et Perspectives} %bilan et Conclusion, parler en onction du cahier des charges, les perspectives futur du projet et l'apport.
